--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "engines": {
     "node": ">=16"
   },
+  "resolutions": {
+    "ansi-regex": "@4.1.1",
+    "follow-redirects": "@1.14.8",
+    "node-fetch": "@2.6.7",
+    "nanoid": "@3.1.31"
+  },
   "scripts": {
     "lint": "next lint",
     "dev": "next",
@@ -37,7 +43,7 @@
     "graphql-hooks": "^5.11.4",
     "htmlescape": "1.1.1",
     "intersection-observer": "0.12.0",
-    "ioredis": "4.19.4",
+    "ioredis": "4.27.8",
     "ms": "2.1.3",
     "next": "^12.0.10",
     "nprogress": "0.2.0",
@@ -48,7 +54,7 @@
     "react-hot-toast": "^2.2.0",
     "smoothscroll-polyfill": "0.4.4",
     "swr": "0.3.9",
-    "validator": "13.5.2",
+    "validator": "13.7.0",
     "vanilla-tilt": "1.7.0"
   },
   "devDependencies": {
