--- a/package.json
+++ b/package.json
@@ -80,4 +80,10 @@
     "tailwindcss": "^3.0.1",
     "typescript": "4.3.2"
   },
+   "resolutions": {
+    "ansi-regex": "@4.1.1",
+    "follow-redirects": "@1.14.8",
+    "node-fetch": "@2.6.7",
+    "nanoid": "@3.1.31"
+  },
 }
